# template-rust-actix-web3

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  build.rs
frontend/src/: lib.rs
frontend/web/: package.json
xtask/: Cargo.toml
xtask/src/: main.rs
