[package]
name = "{{project-name}}-backend"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
categories = []
description = """
{{project-name}}-backend description.
"""
homepage = "https://github.com/kilork/{{project-name}}"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/kilork/{{project-name}}"

[features]

default = [ "ui" ]

ui = ["{{project-name}}-frontend", "actix-web-static-files"]

[dependencies]
actix-web = { version = "3.0", features = ["rustls"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8"

{{project-name}}-frontend = { path = "../frontend", optional = true }
actix-web-static-files = { version = "3.0", optional = true }