[package]
name = "{{project-name}}-frontend"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
categories = []
description = """
{{project-name}}-frontend description.
"""
homepage = "https://github.com/kilork/{{project-name}}"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/kilork/{{project-name}}"
build = "build.rs"

[dependencies]
actix-web-static-files = { version = "3.0.5", features = [ "change-detection" ] }

[build-dependencies]
actix-web-static-files = { version = "3.0.5", features = [ "change-detection" ] }
